feat: only pull request commands

--- a/.github/workflows/slash-command-dispatch.yaml
+++ b/.github/workflows/slash-command-dispatch.yaml
@@ -12,3 +12,4 @@ jobs:
           token: ${{ secrets.PAT }}
           commands: example
           repository: wayn3r/slash-command-processor
+          issue-type: pull-request
