--- a/.github/workflows/slash-command-dispatch.yaml
+++ b/.github/workflows/slash-command-dispatch.yaml
@@ -11,7 +11,7 @@ jobs:
         uses: peter-evans/slash-command-dispatch@v4
         with:
           token: ${{ secrets.PAT }}
-          commands: example
+          commands: example,example-error
           repository: wayn3r/slash-command-processor
           issue-type: pull-request
           allow-edits: false
