--- a/.github/workflows/slash-command-dispatch.yaml
+++ b/.github/workflows/slash-command-dispatch.yaml
@@ -1,7 +1,7 @@
 name: Slash Command Dispatch
 on:
   issue_comment:
-    types: [created, edited]
+    types: [created]
 jobs:
   slashCommandDispatch:
     runs-on: ubuntu-latest
@@ -11,10 +11,11 @@ jobs:
         uses: peter-evans/slash-command-dispatch@v4
         with:
           token: ${{ secrets.PAT }}
-          commands: example
+          commands: example,example-error
           repository: wayn3r/slash-command-processor
           issue-type: pull-request
-          allow-edits: true
+          allow-edits: false
+          reactions: false
       - name: Edit comment with error message
         if: steps.scd.outputs.error-message
         uses: peter-evans/create-or-update-comment@v4
